Cleanup the package.json file

--- a/package.json
+++ b/package.json
@@ -22,16 +22,5 @@
     "sequelize": "^5.8.7",
     "sqlite3": "^4.0.8"
   },
-  "engines": {
-    "node": "8.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch",
-    "express"
-  ]
+  "license": "MIT"
 }
